# book

./: .gitignore  Book.sublime-syntax  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  SYNTAX.md  a.out  log.txt  sample.graphviz  sc.sh  std.c  std.cc  todo.md
.github/workflows/: test.yml
bench/: call_overhead_bench.bk  loop_bench.bk  loop_bench.rs  rec_bench.bk  rec_bench.rs
docs/source/: conf.py  index.rst  lexer.rst
examples/: array.bk  example_struct.bk  example_struct.out  first.bk  first.out  identity.bk  math.bk  spec.bk  syntax_err.bk
examples/example_project/: bkpm.toml
examples/example_project/src/: main.out
src/: lib.rs  main.rs
src/bkpm/: README.md  mod.rs
src/codegen/: cfg.rs  mod.rs  optimise_ast.rs  tests.rs  typechecker.rs
src/codegen/generator/: expression.rs  function.rs  gen_binop.rs  gen_call.rs  mod.rs
src/interpreter/: .backup.rs  cfg.rs  codegen.rs  mod.rs  optimise_ast.rs  tests.rs  translate.rs  typechecker.rs  utils.rs
src/lexer/: mod.rs  test_keywords.rs  test_literals.rs  test_operators.rs  test_punctuators.rs  tokens.rs
src/parser/: expression.rs  function.rs  mod.rs  program.rs  tests.rs
test_inputs/: test_comments.bk  test_expressions.bk  test_function.bk  test_invalid_if.bk  test_structs.bk
